1_k8s/4_gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-ingress
    namespace: production
spec:
    ingressClassName: nginx
    rules:
        - host: helloworld.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-gateway
                            port:
                                number: 80
